Changelog

# check if exif_read_data exists
~ updating blueimp fileupload and adding support for Chrome resizing
+ added double click event to galleria
# implement some OpenGraph attributes for facebook share
# fixes warning when installing cb plugins
# try to keep the orientation of the generated thumb
# on some servers the thumbs couldn't be created
+ added a JED review request
+ Make it possible to override the loaded language with a plugin
+ added CompojoomQueryHelper::in function to create column IN ('2', '3') string
# changes to the way checkboxes work
# get correct avatars using EasySocials queries
# wrong query for easysocial avatars
+ added a checkbox custom field
+ added support for avatars from Easysocial
+ added support for profiles from Easysocial
# cb installation was showing an error when no language file was present in the package
+ added support for custom fields
# on some installation the avatars and profiles were causing a fatal error due to missing JFolder class
+ added avatar support for CB, Jomsocial, Kunena and k2
+ added profile support for CB, Jomsocial, Kunena and k2
# go around the "error loading feed" problem on joomla 2.5
# adding border around non-active elements in .btn-group
lib_compojoom 4.0.7
# Small CSS Fixes in bootstrap (removed important from sm-2 and sm-4)
# Bootstrap 3 should now work better with bootstrap 2 loaded
# Small fixes in the backend (style.css)
+ Added qTip 2

lib_compojoom 4.0.0

+ initial release