@@ -160,3 +160,7 @@ LIB_COMPOJOOM_CUSTOM_FIELDS_COMPONENT_LABEL="Position"
 LIB_COMPOJOOM_CUSTOM_FIELDS_COMPONENT_LABEL_DESC="Set the position where the custom field should be shown?"
 LIB_COMPOJOOM_CUSTOM_FIELDS_SHOW_LABEL_LABEL="Show label"
 LIB_COMPOJOOM_CUSTOM_FIELDS_SHOW_LABEL_DESC="Should the label be shown or just the content?"
+LIB_COMPOJOOM_DELETE="Delete"
+LIB_COMPOJOOM_CANCEL="Cancel"
+LIB_COMPOJOOM_ERROR="Error"
+LIB_COMPOJOOM_START="Start"
