@@ -1,5 +1,6 @@
 Changelog
 
+# missing translations in the fileupload
 # check if exif_read_data exists
 ~ updating blueimp fileupload and adding support for Chrome resizing
 + added double click event to galleria
